# openmp_hybrid

./: CMakeLists.txt  Makefile  README.md  omp_hybrid.c
